// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentPanel when component is set to a component renders a h3 tag containing the component id and a link to the component's page 1`] = `
"<div>
  <h4><a href=\\"/components/test-id\\">Test Name</a></h4>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`ComponentPanel when description is set renders the description 1`] = `
"<div>
  <h4><a href=\\"/components/test-id\\">Test Name</a></h4>
  <!---->
  <!---->
  <div>
    <h5>Description</h5>
    <div>
      <p>Description</p>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`ComponentPanel when links is set renders the links 1`] = `
"<div>
  <h4><a href=\\"/components/test-id\\">Test Name</a></h4>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div>
    <h5>Links</h5>
    <ul>
      <li><a href=\\"https://example.org/test-1\\" target=\\"_blank\\">https://example.org/test-1</a> <br>
        <!---->
      </li>
      <li><a href=\\"https://example.org/test-2\\" target=\\"_blank\\">https://example.org/test-2</a> <br>
        <!---->
      </li>
    </ul>
  </div>
</div>"
`;

exports[`ComponentPanel when notes is set renders the notes 1`] = `
"<div>
  <h4><a href=\\"/components/test-id\\">Test Name</a></h4>
  <!---->
  <!---->
  <!---->
  <div>
    <h5>Notes</h5>
    <div>
      <p>Notes</p>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`ComponentPanel when responsibilities is set renders the responsibilities 1`] = `
"<div>
  <h4><a href=\\"/components/test-id\\">Test Name</a></h4>
  <!---->
  <!---->
  <!---->
  <!---->
  <div>
    <h5>Responsibilities</h5>
    <ul>
      <li>
        <div>
          <p>Test Description 1</p>
        </div>
      </li>
      <li>
        <div>
          <p>Test Description 2</p>
        </div>
      </li>
    </ul>
  </div>
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`ComponentPanel when tags is set renders the tags 1`] = `
"<div>
  <h4><a href=\\"/components/test-id\\">Test Name</a></h4>
  <!---->
  <div>
    <h5>Tags</h5>
    <ul>
      <li>test-tag-1</li>
      <li>test-tag-2</li>
    </ul>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`ComponentPanel when teams is set renders the teams 1`] = `
"<div>
  <h4><a href=\\"/components/test-id\\">Test Name</a></h4>
  <div>
    <h5>Teams</h5>
    <ul>
      <li><a href=\\"/teams/test-team-id-1\\" class=\\"team-name\\">test-team-id-1</a>
        <!---->
        <!---->
      </li>
      <li><a href=\\"/teams/test-team-id-2\\" class=\\"team-name\\">test-team-id-2</a>
        <!---->
        <!---->
      </li>
    </ul>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`ComponentPanel when techDebts is set renders the techDebts 1`] = `
"<div>
  <h4><a href=\\"/components/test-id\\">Test Name</a></h4>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div>
    <h5>Tech Debts</h5>
    <ul>
      <li><span><span class=\\"badge badge-success\\">Missing Priority</span></span>
        <div>
          <p>Test Description 1</p>
        </div>
        <div></div>
        <!---->
      </li>
      <li><span><span class=\\"badge badge-success\\">Missing Priority</span></span>
        <div>
          <p>Test Description 2</p>
        </div>
        <div></div>
        <!---->
      </li>
    </ul>
  </div>
  <!---->
  <!---->
</div>"
`;
